--- a/contato.html
+++ b/contato.html
@@ -6,60 +6,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="_css/styles.css">
-        <style>
-
-            label {
-                display: inline-block;
-                font-size: 0.9em;
-                font-weight: bold;
-                width: 90px;
-            }
-
-            input, textarea {
-                display: inline-block;
-                width: 200px;
-                border: 1px solid #CCC;
-                box-shadow: inset 2px 2px 2px #EEE;
-                font-size: 0.9em;
-                padding: 2px 5px;
-            }
-
-            textarea {
-                height: 100px;
-            }
-
-            .hint {
-                background-color: #FFFBE4;
-                border-radius: 3px;
-                border: 1px solid #CCC;
-                box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-                display: inline-block;
-                font-size: 0.8em;
-                margin-left: 20px;
-                padding: 3px;
-            }
-            
-            .hint {
-                display: none;
-            }
-            
-            input:focus + .hint, textarea:focus + .hint {
-                display: inline-block;
-            }
-        </style>
+        <link rel="stylesheet" href="_css/style_contato.css">
     </head>
     <body>
         <div id="interface">
             <form method="POST" action="">
                 <p>
                     <label for="nome">Nome:</label>
-                    <input type="text" id="nome" name="name">
+                    <input type="text" id="nome" name="name" autofocus>
                     <span class="hint">digite seu nome completo.</span>
+
                 </p>
                 <p>
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email">
                     <span class="hint">por exemplo, seunome@dominio.com</span>
+                    <span class="error">Preencha o seu email corretamente.</span>
                 </p>
                 <p>
                     <label for="assunto">Assunto:</label>
